fixed form sizes and alignment as well as edit page

--- a/app/assets/stylesheets/cucumber_style.css.scss
+++ b/app/assets/stylesheets/cucumber_style.css.scss
@@ -3,8 +3,8 @@ html{
 }
 
 body {
+  font-family: 'Hanuman', serif;
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
   color: #333333;
@@ -43,14 +43,21 @@ body {
 .pure-input-1-2:focus{
   border: 1px solid green;
 }
-
+input[type=name] {
+  height: 3em;
+}
 input[type=email] {
 }
 input[type=password]{
+  height: 3em;
 }
-
+input[type=submit] {
+-webkit-appearance: button;
+cursor: pointer;
+margin-left: 0em;
+}
 input[type="text"]{
-  height:30px;
+  height:3em;
   margin-right: 1em;
 }
 .nav {
